samples/_failures_safe/1761670254_3e982c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb30acf8.c: In function ‘main’:
./samples/SAFE/__tmp_eb30acf8.c:170:9: error: expected identifier or ‘(’ at end of input
  170 |         int from, to,
      |         ^~~
./samples/SAFE/__tmp_eb30acf8.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb30acf8.c:170:9: error: expected declaration or statement at end of input
